--- a/static/css/upload/upload.css
+++ b/static/css/upload/upload.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 * {
   margin: 0;
@@ -29,7 +29,6 @@
 .card h3 {
   font-size: 22px;
   font-weight: 600;
-  
 }
 
 .drop_box {
@@ -66,7 +65,7 @@
   transition: 0.3s;
 }
 
-.btn:hover{
+.btn:hover {
   text-decoration: none;
   background-color: #ffffff;
   color: #005af0;
@@ -94,11 +93,19 @@
   transition: 0.3s;
 }
 
-.btn-red:hover{
+.btn-red:hover {
   text-decoration: none;
   background-color: #ffffff;
   color: #ae0000;
   padding: 10px 20px;
   border: none;
   outline: 1px solid #010101;
+}
+
+.file-name {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
 }
